src/actions/components/Sidebar/Sidebar.css
.sidebar {
    position: absolute;
    top: 100px;
    bottom: 0;
    left: 0;
    width: 200px;
    background-color: #333;
    overflow-y: hidden;
}

.sidebar ul {
    list-style: none;
    padding: 0;
    width: 20px;
    margin-left: 0;
}

.sidebar li a {
    display: block;
    color: #fff;
    padding: 20px;
    text-decoration: none;
}

.sidebar li a:hover {
    background-color: #444;
}

